fixes #6054 fix(nimbus): Make TootipWithMarkdown tips visible when they're in pre/code tags
Because:
* Some tooltips appeared to not be displaying

This commit:
* Sets text in tooltips rendering as code to white

--- a/app/experimenter/nimbus-ui/src/styles/index.scss
+++ b/app/experimenter/nimbus-ui/src/styles/index.scss
@@ -135,8 +135,15 @@ select.form-control.is-warning {
   height: 18px;
 }
 
-.__react_component_tooltip > p:last-child {
-  margin-bottom: 0;
+.__react_component_tooltip {
+  pre {
+    @extend .text-white;
+    margin-bottom: 0;
+  }
+
+  > p:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .cursor-copy {
